k8s/api-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
spec:
  # replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: ryojpn/todo-api
          ports:
            - containerPort: 4000
          resources:
            limits:
              cpu: "500m"
              memory: "700Mi"
            requests:
              cpu: "300m"
              memory: "500Mi"
