k8s/api-cluster-ip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: api
  ports:
    - port: 4000
      targetPort: 4000
