k8s/api.yml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: todo
  labels:
    app.kubernetes.io/name: api
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: api
  ports:
    - port: 4000
      targetPort: 4000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: todo
  labels:
    app.kubernetes.io/name: api
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: api
    spec:
      containers:
        - name: api
          image: ryojpn/todo-api
          ports:
            - containerPort: 4000
          resources:
            limits:
              cpu: "500m"
              memory: "700Mi"
            requests:
              cpu: "300m"
              memory: "500Mi"
