k8s/frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: todo
  labels:
    app.kubernetes.io/name: frontend
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app.kubernetes.io/name: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: todo
  labels:
    app.kubernetes.io/name: frontend
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: frontend
    spec:
      containers:
        - name: frontend
          image: ryojpn/todo-frontend
          ports:
            - containerPort: 3000
          resources:
            limits:
              cpu: "100m"
              memory: "64Mi"
            requests:
              cpu: "50m"
              memory: "32Mi"
