k8s/mongo.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: todo
  labels:
    app.kubernetes.io/name: mongo
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: mongo
  ports:
    - port: 27017
      targetPort: 27017
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  namespace: todo
  labels:
    app.kubernetes.io/name: mongo
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mongo
  serviceName: mongo
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: mongo
    spec:
      containers:
        - name: mongo
          image: mongo
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: storage
              mountPath: /data/db
              subPath: mongo
          resources:
            limits:
              cpu: "200m"
              memory: "800Mi"
            requests:
              cpu: "100m"
              memory: "400Mi"
  volumeClaimTemplates:
    - metadata:
        name: storage
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 1Gi
